# deepseek-v4-candle

./: .gitignore  Cargo.toml  README.md
examples/: toy_forward.rs
src/: attention.rs  block.rs  config.rs  lib.rs  loader.rs  mhc.rs  model.rs  moe.rs  quant.rs  rope.rs  sparse.rs
tests/: attention.rs  block.rs  config.rs  loader.rs  mhc.rs  model.rs  moe.rs  quant.rs  rope.rs  sparse.rs
tests/common/: mod.rs
tests/fixtures/: hybrid_golden.py  make_sample.py  make_toy_ckpt.py  make_toy_hybrid_ckpt.py  sample.safetensors  toy_ckpt.safetensors  toy_config.json  toy_hybrid_ckpt.safetensors  toy_hybrid_config.json
